fixed image stretching

--- a/style/style.css
+++ b/style/style.css
@@ -637,7 +637,6 @@ main nav,
 .inventory-image-div > img {
 		height: 10vh;		
 		width: 11vh;
-		background: red;
 }
 
 .container {
